<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory android:title="@string/settings_title">
        <SwitchPreference
               android:key="@string/pref_key_switch_alert"
               android:title="@string/pref_title_switch_alert"
               android:summary="@string/pref_summary_switch_alert"
               android:textColor="@color/text_color"
               android:defaultValue="true" />

        <ListPreference
            android:key="@string/pref_key_list_min_humid_pref"
            android:title= "@string/pref_list_title_min_humid_pref"
            android:summary="%s"
            android:entries="@array/list_min_humid"
            android:entryValues="@array/list_min_humid_values"
            android:defaultValue="@string/list_min_humid_default"
            />

        </PreferenceCategory>

</PreferenceScreen>